# beaker

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
beaker/: benchmark.py  sqlwarehouseutils.py
examples/: beaker_getting_started.dbc  beaker_getting_started.py  beaker_standalone.py  beaker_standalone_new_wh.py  beaker_standalone_tpch.py  getting_started.ipynb  requirements.txt  standalone_dist_test.py
examples/queries/: q1.sql  q10.sql  q2.sql  test.py
examples/queries_orig/: q1.sql  q2.sql
examples/tpch/: 1.sql  2.sql
src/beaker/: __init__.py  benchmark.py  spark_fixture.py  sqlwarehouseutils.py
src/unittest/: test  test_Benchmark.py
