[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beaker"
dynamic = ["version"]
description = "Setup and run queries on Databricks dbsql warehouse."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Will Girten", email = "will.girten@databricks.com" },
]
dependencies = [
    "requests",
    "databricks-sql-connector",
    "pyspark"
]

[project.urls]
Homepage = "https://github.com/goodwillpunning/beaker"

[tool.hatch.version]
path = "src/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]
