[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beaker"
dynamic = ["version"]
description = "Setup and run queries on Databricks dbsql warehouse."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Will Girten", email = "will.girten@databricks.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
    "requests",
    "databricks-sql-connector",
    "pyspark"
]

[project.urls]
Homepage = "https://github.com/goodwillpunning/beaker"
Bug-Tracker = "https://github.com/goodwillpunning/beaker/issues"

[tool.hatch.version]
path = "src/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]
