[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beaker"
dynamic = ["version"]
description = "Execute query benchmarks against Databricks SQL warehouses and clusters."
readme = "README.md"
authors = [
    { name = "Will Girten", email = "will.girten@databricks.com" },
    { name = "Nishant Deshpande", email = "nishant.deshpande@databricks.com"},
    { name = "Michael Berk", email = "michael.berk@databricks.com"}
]
keywords = ["Spark", "Databricks", "DBSQL", "Benchmark"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
    "requests",
    "databricks-sql-connector",
    "pyspark"
]

[project.urls]
Homepage = "https://github.com/goodwillpunning/beaker"
Bug-Tracker = "https://github.com/goodwillpunning/beaker/issues"

[tool.hatch.version]
path = "src/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]
